--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMp/n2oZfLEh22eP6Ie7ewL",
+      "authorship_tag": "ABX9TyOG09hCWEcTr7gFLccvxUH6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,13 @@
       ],
       "metadata": {
         "id": "7t5_4ntZXTgt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "LoQRHL4fKmOm"
       }
     },
     {
@@ -756,6 +763,361 @@
       ],
       "metadata": {
         "id": "zxqgni6Y6r_X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **3. Top 10 Host with maximum number of reviews on the basis of reviews per months.**"
+      ],
+      "metadata": {
+        "id": "bJNWyq-2Kphi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Top Host With Maximum Reviews\n",
+        "top10_host_with_review = airbnb_data.loc[airbnb_data['number_of_reviews'].value_counts(),'host_id']\n",
+        "top10_host_with_review"
+      ],
+      "metadata": {
+        "id": "nDk0nm-dKqgT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top10_host_with_review_df = pd.DataFrame(top10_host_with_review)\n",
+        "top10_host_with_review_df.reset_index(inplace=True)\n",
+        "top10_host_with_review_df.rename(columns={'index' :'no_of_reviews', 'host_id' : 'Host_id'}, inplace=True)\n",
+        "top10_host_with_review_df.head(10)"
+      ],
+      "metadata": {
+        "id": "vS7fDKBhKt67"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airbnb_data[airbnb_data['host_id'] == 40532977]"
+      ],
+      "metadata": {
+        "id": "F-EbqMJkKv9n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airbnb_data[airbnb_data['host_id'] == 3028267].head(1)"
+      ],
+      "metadata": {
+        "id": "Fv2ttHHCKxoM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "So, Johari leads the most no. of review in neighbourhood group and room type in New York city followed by Vernon."
+      ],
+      "metadata": {
+        "id": "mTNhdxNHK0e_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>4. Top 10 most reviewed properties/listings on airbnb. "
+      ],
+      "metadata": {
+        "id": "KUIEQYUEK3b1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#top 10 most reviewed listings \n",
+        "top10_reviewed_listings= airbnb_data.nlargest(10,'reviews_per_month')[['name','reviews_per_month','neighbourhood_group','price']]\n",
+        "top10_reviewed_listings"
+      ],
+      "metadata": {
+        "id": "klVNrhk5LKC-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Property with highest number of reviews is Enjoy great views of the City in our Deluxe Room! with 58 reviews/month followed by Great Room in the heart of Times Square! with 27 reviews/month that is from Manhattan.\n",
+        "\n",
+        "So that Manhattan is the best suited place for a comfortable stay but the prices are also high."
+      ],
+      "metadata": {
+        "id": "MYlsOodGLMWT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>5. Top 3 Mostly Expensive Property/listings on airbnb."
+      ],
+      "metadata": {
+        "id": "RiXGSgvtLO75"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# expensive listings in each neighbourhood groups\n",
+        "most_expensive_listing = airbnb_data.loc[airbnb_data.groupby(['neighbourhood_group'])['price'].idxmax()][['name','neighbourhood','neighbourhood_group','host_name','price']].sort_values(by='price',ascending=False)[:5]\n",
+        "most_expensive_listing"
+      ],
+      "metadata": {
+        "id": "xVcJDbC_LRRt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airbnb_data[airbnb_data['price'] == airbnb_data['price'].max()].head(3)"
+      ],
+      "metadata": {
+        "id": "myGUVUjOLS1z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Most costly listing is from Luxury 1 bedroom apt. -stunning Manhattan views, 1-BR Lincoln Center and Furnished room in Astoria apartment which is from Manhattan, Brooklyn and Queens hosted by Erin, Jelena and Kathrine respectively."
+      ],
+      "metadata": {
+        "id": "TLyyf4b_LVp2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>6. Which Property type and room type is cheapest and more available on airbnb ?"
+      ],
+      "metadata": {
+        "id": "thqUjPzoLYNF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Most cheapest listings in each neighbourhood groups\n",
+        "most_cheapest_neighgroup = airbnb_data.loc[airbnb_data.groupby(['neighbourhood_group'])['price'].idxmin()][['name','neighbourhood_group','host_name','room_type','price']].sort_values(by='price',ascending=False)\n",
+        "most_cheapest_neighgroup"
+      ],
+      "metadata": {
+        "id": "JUieP2VCLadu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Most cheapest listing is from IT'S SIMPLY CONVENIENT! and Happy Home 3 which is from Queens and Staten Island hosted by Maria and Raquel respectively. As it is cheap property so it will be more available for the customers.\n",
+        "\n",
+        "Some of the properties having a price of zero which is either a free stay for specific time or the willingness of not to share the price with the Airbnb."
+      ],
+      "metadata": {
+        "id": "iSJn0lBBLcYS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airbnb_data.groupby('neighbourhood_group')['room_type'].value_counts().unstack(0)"
+      ],
+      "metadata": {
+        "id": "LQAGpjYRLfcJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "share_room_percent = round((len(airbnb_data[airbnb_data['room_type']=='Shared room'])/len(airbnb_data['room_type']))*100, 2)\n",
+        "print(f'only {share_room_percent} % preffers Shared Room ')"
+      ],
+      "metadata": {
+        "id": "BmgK3jADLg4_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>7. What is the average price/day of Airbnb listings with respect to neighbourhoods in NYC ? (Top neighbourhoods in NYC)"
+      ],
+      "metadata": {
+        "id": "Uhde-yUULj1F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Avg price wrt neighbourhood neighbour\n",
+        "# expensive neighbourhood \n",
+        "df_ngroup= airbnb_data.groupby(['neighbourhood'])['price'].mean().reset_index()\n",
+        "#df_ngroup.head()\n",
+        "df_ngroup_sorted = df_ngroup.sort_values(by='price', ascending=False)\n",
+        "df_ngroup_sorted"
+      ],
+      "metadata": {
+        "id": "DPZIMhPILl8X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top_neigh_each= airbnb_data.loc[airbnb_data.groupby('neighbourhood')['price'].idxmax()][['name','host_name','neighbourhood_group','neighbourhood','room_type','price']]\n",
+        "#top_neigh_each\n"
+      ],
+      "metadata": {
+        "id": "pjmiqyyALnie"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Among the top neighbourhoods in each neighbourhood groups, top 3 of them are Greenpoint, Upper West Side and Astoria which is from Brooklyn, Manhattan and Queens."
+      ],
+      "metadata": {
+        "id": "TYdLmITvLp9O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>8. Properties with less number of reviews."
+      ],
+      "metadata": {
+        "id": "pUVKmxJDLuzr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pro_reviews = airbnb_data[(airbnb_data['reviews_per_month']<3)] \n",
+        "pro_reviews[['name','reviews_per_month','neighbourhood','neighbourhood_group']]"
+      ],
+      "metadata": {
+        "id": "x7Jcqeu4Lxl6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As we see there are more than 32000 properties which have rating less than 3"
+      ],
+      "metadata": {
+        "id": "L5Fd09pIL0xA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>9. Any Particular Neighbourhood/Location with Maximum no. of Bookings and revenue from room type ?"
+      ],
+      "metadata": {
+        "id": "V5jADRx9L27I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_bookings = airbnb_data['neighbourhood'].value_counts()\n",
+        "max_bookings"
+      ],
+      "metadata": {
+        "id": "ZasIpLq0L5Bb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#max booking wrt roomtype \n",
+        "df = airbnb_data.groupby(['neighbourhood','room_type']).agg({'price':'sum'})\n",
+        "df.sort_values(\"price\",ascending=False).head()"
+      ],
+      "metadata": {
+        "id": "gbE1K7VZL6rz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Williamsburg Location has more demand and maximum no. of bookings which has a expensive room type with the maximum price followed by Midtown, Upper West Side respectively."
+      ],
+      "metadata": {
+        "id": "dZkiw31yL8sf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What all manipulations have you done and insights you found?"
+      ],
+      "metadata": {
+        "id": "iCucPJp1L-9f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the data wrangling process, we have analyzed different use cases based on locality, reviews, room type etc, from which we can clearly infere that Manhatten Neighbourhood group has the most expensive and luxurious entire home/apartments with maximum number of rewiews. Rather than it, most of the number of bookings were takes place in Williamsburg Location. We have also analyzed top 10 earner in terms of hosts and average price per day of the listing with respect to neighboorhood."
+      ],
+      "metadata": {
+        "id": "FJ0ZC5ljMBq3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables***"
+      ],
+      "metadata": {
+        "id": "6x-p3AWDMIt5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 1 - Pie Chart (Univariate)"
+      ],
+      "metadata": {
+        "id": "3ZI-Sv5OMGTs"
       }
     }
   ]
