--- a/Personal_Colab.ipynb
+++ b/Personal_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaAe6Z2b8fMhHRf/+FSBF+",
+      "authorship_tag": "ABX9TyP+Z5DSl6cSKVpptDGmMmwB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -389,6 +389,365 @@
       ],
       "metadata": {
         "id": "HOHqkzZr6GP0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>1. Which room type and locality are mostly in demand in NYC ?"
+      ],
+      "metadata": {
+        "id": "HoawqD7RJxnT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write your code to make your dataset analysis ready.\n",
+        "# Most demanded room type\n",
+        "airbnb_data['room_type'].value_counts()"
+      ],
+      "metadata": {
+        "id": "CNpLIIxHJ0Ve"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# room type feature's mean price\n",
+        "airbnb_data.groupby('room_type')['price'].mean()"
+      ],
+      "metadata": {
+        "id": "EUQaWkIdJ-un"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mostly demanded room type is either an entire home with the average price of more than 200 dollar or a private room with the average price of more than 85 dollar. While shared room is cheapest and more avaliable with the average price of 70$ approx. So it is clear that most of the guests prefers Entire home or apartment to stay."
+      ],
+      "metadata": {
+        "id": "5KXHxZR4KBHW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Most demanded locality\n",
+        "airbnb_data['neighbourhood_group'].value_counts()"
+      ],
+      "metadata": {
+        "id": "DPG3lGxeKDuq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Manhattan neighbourhood group is most demanded locality followed by Brooklyn & Queens. While Bronx & Staten Island is least demanded localities."
+      ],
+      "metadata": {
+        "id": "8tFdr-XFKFli"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###**2. Top 10 Host with most properties/listing on airbnb website.**"
+      ],
+      "metadata": {
+        "id": "9cOfnKKKKJPJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Top Most Host With maximum Properties\n",
+        "top10_host_details = airbnb_data['host_id'].value_counts().head(15)\n",
+        "top10_host_details"
+      ],
+      "metadata": {
+        "id": "AMj8624eKLhv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating dataframe for top most host with max properties\n",
+        "top10_host_df = pd.DataFrame(top10_host_details)\n",
+        "top10_host_df.reset_index(inplace=True)\n",
+        "top10_host_df.rename(columns={'index' : 'Host_id', 'host_id':'no_of_properties'}, inplace=True)\n",
+        "top10_host_df.head(10)"
+      ],
+      "metadata": {
+        "id": "OTKuQiAPKOup"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#details of toppest host \n",
+        "airbnb_data[airbnb_data['host_id'] == 219517861].head(1)"
+      ],
+      "metadata": {
+        "id": "5Q7bjKWGKQeS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#details of second toppest host\n",
+        "airbnb_data[airbnb_data['host_id'] == 107434423].head(1)"
+      ],
+      "metadata": {
+        "id": "fEPyn1U5KR8k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So, Sonder(NYC) has the maximum number of \n",
+        "listing on airbnb platform and also leads the most expensive neighbourhood group in New York city followed by Blueground with 232 properties on airbnb."
+      ],
+      "metadata": {
+        "id": "P2ZMRm-dKUHN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>3. Top 10 most reviewed properties/listings on airbnb. "
+      ],
+      "metadata": {
+        "id": "DQf0YxzFKa-h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#top 10 most reviewed listings \n",
+        "top10_reviewed_listings= airbnb_data.nlargest(10,'reviews_per_month')[['name','reviews_per_month','neighbourhood_group','price']]\n",
+        "top10_reviewed_listings"
+      ],
+      "metadata": {
+        "id": "amoN8-mKMjkZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Property with highest number of reviews is Enjoy great views of the City in our Deluxe Room! with 58 reviews/month followed by Great Room in the heart of Times Square! with 27 reviews/month that is from Manhattan.\n",
+        "\n",
+        "So that Manhattan is the best suited place for a comfortable stay but the prices are also high."
+      ],
+      "metadata": {
+        "id": "eWRK7e0wMnFx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>4. Which Property type and room type is cheapest and more available on airbnb ?"
+      ],
+      "metadata": {
+        "id": "GFWukv3CMq9p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Most cheapest listings in each neighbourhood groups\n",
+        "most_cheapest_neighgroup = airbnb_data.loc[airbnb_data.groupby(['neighbourhood_group'])['price'].idxmin()][['name','neighbourhood_group','host_name','room_type','price']].sort_values(by='price',ascending=False)\n",
+        "most_cheapest_neighgroup"
+      ],
+      "metadata": {
+        "id": "7-hML9KRMt9V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Most cheapest listing is from IT'S SIMPLY CONVENIENT! and Happy Home 3 which is from Queens and Staten Island hosted by Maria and Raquel respectively. As it is cheap property so it will be more available for the customers.\n",
+        "\n",
+        "Some of the properties having a price of zero which is either a free stay for specific time or the willingness of not to share the price with the Airbnb."
+      ],
+      "metadata": {
+        "id": "NQY1PPCKMxad"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>5. What is the average price/day of Airbnb listings with respect to neighbourhoods in NYC ? (Top neighbourhoods in NYC)"
+      ],
+      "metadata": {
+        "id": "rqncQoAPM5xL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Avg price wrt neighbourhood neighbour\n",
+        "# expensive neighbourhood \n",
+        "df_ngroup= airbnb_data.groupby(['neighbourhood'])['price'].mean().reset_index()\n",
+        "#df_ngroup.head()\n",
+        "df_ngroup_sorted = df_ngroup.sort_values(by='price', ascending=False)\n",
+        "df_ngroup_sorted"
+      ],
+      "metadata": {
+        "id": "D4iCDhK_M6im"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>6. Properties with less number of reviews."
+      ],
+      "metadata": {
+        "id": "Xml9OZebNVP7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pro_reviews = airbnb_data[(airbnb_data['reviews_per_month']<3)] \n",
+        "pro_reviews[['name','reviews_per_month','neighbourhood','neighbourhood_group']]"
+      ],
+      "metadata": {
+        "id": "G094IEGqNZBx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As we see there are more than 32000 properties which have rating less than 3"
+      ],
+      "metadata": {
+        "id": "xE9s51sRNbGm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>7. Any Particular Neighbourhood/Location with Maximum no. of Bookings and revenue from room type ?"
+      ],
+      "metadata": {
+        "id": "Yxm0ZcN4NdrA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_bookings = airbnb_data['neighbourhood'].value_counts()\n",
+        "max_bookings"
+      ],
+      "metadata": {
+        "id": "1ogTDotPNgBg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#max booking wrt roomtype \n",
+        "df = airbnb_data.groupby(['neighbourhood','room_type']).agg({'price':'sum'})\n",
+        "df.sort_values(\"price\",ascending=False).head()"
+      ],
+      "metadata": {
+        "id": "uiABlCJwNiPe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Williamsburg Location has more demand and maximum no. of bookings which has a expensive room type with the maximum price followed by Midtown, Upper West Side respectively."
+      ],
+      "metadata": {
+        "id": "AMDy63xPNkNv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>8. Top 10 most reviewed properties/listings on airbnb. "
+      ],
+      "metadata": {
+        "id": "nWCsxyofNtxj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#top 10 most reviewed listings \n",
+        "top10_reviewed_listings= airbnb_data.nlargest(10,'reviews_per_month')[['name','reviews_per_month','neighbourhood_group','price']]\n",
+        "top10_reviewed_listings"
+      ],
+      "metadata": {
+        "id": "Sko22Rn1Nv2-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Property with highest number of reviews is Enjoy great views of the City in our Deluxe Room! with 58 reviews/month followed by Great Room in the heart of Times Square! with 27 reviews/month that is from Manhattan.\n",
+        "\n",
+        "So that Manhattan is the best suited place for a comfortable stay but the prices are also high."
+      ],
+      "metadata": {
+        "id": "mOC6ggPDNzZL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What all manipulations have you done and insights you found?"
+      ],
+      "metadata": {
+        "id": "ZIi-SMF-N5h2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the data wrangling process, we have analyzed different use cases based on locality, reviews, room type etc, from which we can clearly infere that Manhatten Neighbourhood group has the most expensive and luxurious entire home/apartments with maximum number of rewiews. Rather than it, most of the number of bookings were takes place in Williamsburg Location. We have also analyzed top 10 earner in terms of hosts and average price per day of the listing with respect to neighboorhood."
+      ],
+      "metadata": {
+        "id": "0dIUjZsAN8il"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables***"
+      ],
+      "metadata": {
+        "id": "yBTBD0XvOAXN"
       }
     }
   ]
