--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsp0COURgSzFCX4adQF0g1",
+      "authorship_tag": "ABX9TyPos0VZ+9UuBaupVKq+Vxz8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1803,6 +1803,445 @@
       ],
       "metadata": {
         "id": "8x2St9VUZ6hO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 6 - Violin plot (Bivariate)"
+      ],
+      "metadata": {
+        "id": "XdFK8zzq-RjE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 6 visualization code\n",
+        "plt.figure(figsize = (10,5))\n",
+        "fig = sns.violinplot(data = airbnb_data, x = 'neighbourhood_group', y = airbnb_data[airbnb_data['price'] < 800]['price'])\n",
+        "fig.set_title('Density & distribution of prices for each neighberhood_group')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "IrNzXCnG-aED"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "2u9ATKCm-cCv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "VANNqxD1-d_8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As usual Manhattan being the most costliest place to live in followed by Brooklyn. We can also show the average price of most costliest place by using pointplot which we will see further.\n",
+        "\n",
+        "Queens, Staten Island are on the same page with price on listings."
+      ],
+      "metadata": {
+        "id": "a7i7hIX0-eqH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "ghyYQ5GH-iVM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 7 - Boxplot on Neighbourhood group & Room Availability (Bivariate)"
+      ],
+      "metadata": {
+        "id": "h2XxIaAl-mlp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 7 visualization code\n",
+        "fig = plt.subplots(figsize=(15,8))\n",
+        "ax=sns.boxplot(data=airbnb_data, x='neighbourhood_group', y='availability_365', palette=\"bright\")\n",
+        "plt.title(\"Neighbourhood Group vs. Room Availabilty\")\n",
+        "plt.xlabel('Neighbourhood groups')\n",
+        "plt.ylabel('Availability(365)')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "cLxxTcwV-oTJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "dwO4gYsq-p9T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Box plots are generally used to show distributions of numeric data values, especially when you want to compare them between multiple groups. They are built to provide general information about a group of data that whether the data has symmetrical property, skewness, have variance, have outliers or not."
+      ],
+      "metadata": {
+        "id": "ZpvWv8po-rgb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "XAV4Ubhj-thH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It tells us that staten island has more avaliability of rooms throghout the year(more than 300 days). on an average this properties are available to around 210 days every year followed by Bronx where every property are available for 150 on an average every year."
+      ],
+      "metadata": {
+        "id": "2RcMIP5P-vQZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "Z-JseNB5-xjV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 8 - Scatter Plot (Multivariate Analysis)"
+      ],
+      "metadata": {
+        "id": "Zuwh8xhU-zzA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 8 visualization code\n",
+        "# Lets find belonging coordinates using longitude and latitude\n",
+        "plt.figure(figsize=(10,8))\n",
+        "sns.scatterplot(x=airbnb_data.latitude, y=airbnb_data.longitude, hue=airbnb_data.room_type , palette='bright')\n",
+        "plt.title('Distribution of a Room Type')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "MO5cu4fC-1Nn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From above two scatterplots of latitude vs longitude, we can see that there's is very less shared room throughout NYC as compared to private and Entire home/apt. 95% of the listings on Airbnb are either Private room or Entire/home apt."
+      ],
+      "metadata": {
+        "id": "2pvJf5iQ-3FT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#now look at the listings availability in a year throughout NYC\n",
+        "plt.subplots(figsize=(10, 8))\n",
+        "sns.scatterplot(data=airbnb_data,x='longitude', y='latitude', hue=\"availability_365\",palette='coolwarm',size='availability_365', sizes=(20,300))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "NipU2iVr-4jV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So by this graph, it is clear that Bronx & Staten Island has listings which are mostly available throughout the year, might be the case as they are not much costlier as compared to other boroughs as in Manhanttan, Brooklyn & Queen"
+      ],
+      "metadata": {
+        "id": "VwsCpJKx-6Fi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Extracting prices and review from the table\n",
+        "price = airbnb_data['price']\n",
+        "price_review = airbnb_data[['number_of_reviews', 'price']].sort_values(by = 'price')\n",
+        "price_review.plot(x = 'price', y = 'number_of_reviews', style = 'o', figsize=(10,8), legend=False)\n",
+        "\n",
+        "plt.title('Reviews based on Price')\n",
+        "plt.xlabel(\"Price\")\n",
+        "plt.ylabel(\"Number of reviews\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "MWxcfepT-7ce"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the above graph, we can clearly see that number of reviews, a listing receives does not have much of an impact on the price."
+      ],
+      "metadata": {
+        "id": "9qg2vDFa-9Va"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "A0GUIzWn-_Pv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Scatter plot is dotted representation of the two variables in a datasets which uses a coordinate axes to plot the points. "
+      ],
+      "metadata": {
+        "id": "PU43hJle_BBB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "kjU6Fwg4_C3A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the above graph, we can clearly see that number of reviews, a listing receives does not have much of an impact on the price."
+      ],
+      "metadata": {
+        "id": "fOpEsy-K_El_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "PE4-DOjR_GpE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Point plot is generally utilized for representing an estimate of central tendency for a numerical variable via the role of scatter plot points. This plot constantly treats one of the variables as categorical and draws data for an ordinal position on a applicable axis even, if the record is of the numerical type. \n",
+        "\n",
+        "There is a line which connects each point, shows the interaction between two categorical variables which is easier for us than comparing the heights of several groups of points or bars."
+      ],
+      "metadata": {
+        "id": "XQARrKIS_IK_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "IronBS92_epn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can see that Manhattan has the highest(the costliest) average of price ranging to 150dollars/day followed by Brooklyn\n",
+        "\n",
+        "Queens and Staten Island have same average price/day, while Bronx comes out to be the cheapest neighbourhood group in New York city.\n",
+        "\n",
+        "We have used pointplot here so that it can be easily understable for us that manhattan has the costliest average price per day followed by brooklyn. While besides bronx, other cities have same average price per day. "
+      ],
+      "metadata": {
+        "id": "8hmJTHl9_gTr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "5etQrPTv_iU8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 9 - Cat Plot (Multivariate)"
+      ],
+      "metadata": {
+        "id": "3RvX_Lmq_ke_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 9 visualization code\n",
+        "plt.figure(figsize=(10,10))\n",
+        "\n",
+        "fig = sns.catplot(data=airbnb_data, x=\"room_type\", y=\"price\", col=\"neighbourhood_group\", kind=\"bar\", ci=None)\n",
+        "fig.set_axis_labels(\"\",\"Price ranges on room_types\")\n",
+        "fig.set_xticklabels([\"Private room\", \"Entire home/apt\", \"Shared room\"],rotation=60)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "9jGEZ6GG_mGH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Room_type with respect to number_of_reviews & neighbourhood_group\n",
+        "\n",
+        "a= sns.catplot(x='neighbourhood_group', y='number_of_reviews', hue='room_type',kind='boxen',data=airbnb_data)"
+      ],
+      "metadata": {
+        "id": "yKftVOIc_nnt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "StyNzXTj_pfL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have used cat plot here which is basically a categorical plot allows us to work with categorical data and by using the catplot, we can plot maximum 8 different types of graph using the 'kind' parameter.\n"
+      ],
+      "metadata": {
+        "id": "8mwjLoGc_sQY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fM4rPG99_ucA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "We can see here that property with Entire home/apt as room_type has demand at New York city followed by private rooms.\n",
+        "\n",
+        "Manhattan has the highest price for room types being the most expensive place to live in."
+      ],
+      "metadata": {
+        "id": "lpg1WOtD_we7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **5. Solution to Business Objective**"
+      ],
+      "metadata": {
+        "id": "9zTou006_yhB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### What do you suggest the client to achieve Business Objective ? \n",
+        "Explain Briefly."
+      ],
+      "metadata": {
+        "id": "6hT1YLH2_1Bx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conclusion**"
+      ],
+      "metadata": {
+        "id": "fMGJA8P7_5G9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this analysis project, about 10 different use cases were analyzed on the given dataset to make better business decisions and help analyze customer trends and satisfaction, which can lead to new and better products and services. It has been found that Most of the Bookings were takes place for the \"Williamsburg\" of around \"27%\" followed by \"Bedford-Stuyvesant\", \"Harlem\" which has \"25%\" & \"18%\" respectively. Additionally, we also find-out the Top Earners (Host), relationship between neighbourhood group and Prices, Price comparison in terms of Room Type, Preference of Guests with respect to Room Type. Furthermore, we have also been analyzed Maximum Number of Bookings, Customer Reviews and many more."
+      ],
+      "metadata": {
+        "id": "npJeprZy_8Ep"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ***Hurrah! You have successfully completed your EDA Capstone Project !!!***"
+      ],
+      "metadata": {
+        "id": "2j0gwvR8_-V4"
       }
     }
   ]
